--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,5 @@
 FROM mcr.microsoft.com/devcontainers/anaconda:1-3
 
-
-RUN useradd -u 5005 -d "/workspaces" -m k8s 
-
-
 # Copy environment.yml (if found) to a temp location so we update the environment. Also
 # copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
 COPY environment.yml* .devcontainer/noop.txt /tmp/conda-tmp/
@@ -15,4 +11,6 @@ RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bi
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
 
 
+RUN useradd -u 5005 -d "/workspaces" -m -s /usr/bin/bash k8s
+RUN if [ -f "/workspaces" ]; then chown 5005 /workspaces; fi
 USER k8s
