--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,6 +9,8 @@ RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bi
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y --no-install-recommends upgrade
 
+RUN conda install -c conda-forge notebook nb_conda_kernels jupyterlab jupyter_contrib_nbextensions pip
+
 RUN useradd -u 5005 -g vscode -d "/workspaces" -m -s /usr/bin/bash k8s
 RUN if [ -f "/workspaces" ]; then chown -R 5005 /workspaces; fi
 USER k8s
